# queues

day1/: .golangci.yaml  Makefile  README.md  config.local.yaml  docker-compose.yml  go.mod  go.sum
day1/cmd/app/: main.go
day1/docker/go/: Dockerfile
day1/docker/kafka/broker1/: server.properties
day1/docker/kafka/broker2/: server.properties
day1/internal/app/: app.go  config.go
day1/internal/consumer/: consumer.go
day1/internal/kafka/: kafka.go
day1/internal/producer/: producer.go
day1/internal/random/: random.go
day3/: .gitignore  Dockerfile  Makefile  README.md  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
day3/gradle/wrapper/: gradle-wrapper.properties
day3/src/main/kotlin/: Cli.kt  (+10 more)
day4/: .env.example  .gitignore  Makefile  README.md  composer.json  docker-compose.yaml  http.sh  phpstan.neon  random.sh  server.http
day4/docker/clickhouse-init/: init.sql
day4/docker/debezium/: config.json
day4/docker/php/: Dockerfile
day4/docker/postgres-init/: init.sql
day4/docker/sequin/: playground.yml
day4/src/: createClickHouse.php  createLogger.php  createMapper.php  createPostgres.php  createRouter.php  createServer.php  parseEnv.php  setupSchema.php  shutdown.php
day4/src/ClickHouse/: Client.php
day4/src/Http/: response.php
day4/src/Internal/: Application.php  RequestMapper.php
day4/src/Router/: CallableRequestHandler.php  RouterBuilder.php
day4/src/Sql/: parseError.php  queryBuilder.php
day5/: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yaml
day5/src/: lib.rs  nats.rs  responder.rs  tracer.rs
(+10 files in other folders)
