[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.40.0"
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "subscriber"
path = "src/bin/subscriber.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
